--- a/examples/makefile
+++ b/examples/makefile
@@ -8,6 +8,7 @@ ifeq ($(shell uname), Darwin)                                           # Apple
     INCLUDE      := /usr/local/include
     CXXFLAGS     := -pedantic -std=c++14 -I$(INCLUDE) -Wall -Weffc++
     LIB          := /usr/local/lib
+    LIBG         := /usr/local/lib
     LDFLAGS      := -lboost_serialization -lgtest_main
     CLANG-CHECK  := clang-check
     GCOV         := gcov
@@ -20,6 +21,7 @@ else ifeq ($(CI), true)                                                 # Travis
     INCLUDE      := /usr/include
     CXXFLAGS     := -pedantic -std=c++14 -Wall -Weffc++
     LIB          := /usr/lib
+    LIBG         := $(PWD)/gtest
     LDFLAGS      := -lboost_serialization -lgtest -lgtest_main -pthread
     CLANG-CHECK  := clang-check
     GCOV         := gcov-5
@@ -32,6 +34,7 @@ else ifeq ($(shell uname -p), unknown)                                  # Docker
     INCLUDE      := /usr/include
     CXXFLAGS     := -pedantic -std=c++14 -Wall -Weffc++
     LIB          := /usr/lib
+    LIBG         := /usr/lib
     LDFLAGS      := -lboost_serialization -lgtest -lgtest_main -pthread
     CLANG-CHECK  := clang-check
     GCOV         := gcov
@@ -44,6 +47,7 @@ else                                                                    # UTCS
     INCLUDE      := /usr/include
     CXXFLAGS     := -pedantic -std=c++14 -Wall -Weffc++
     LIB          := /usr/local/lib
+    LIBG         := /usr/local/lib
     LDFLAGS      := -lboost_serialization -lgtest -lgtest_main -pthread
     CLANG-CHECK  := clang-check
     GCOV         := gcov
