--- a/exercises/makefile
+++ b/exercises/makefile
@@ -12,6 +12,7 @@ ifeq ($(shell uname), Darwin)                                           # Apple
     INCLUDE      := /usr/local/include
     CXXFLAGS     := -pedantic -std=c++14 -I$(INCLUDE) -Wall -Weffc++
     LIB          := /usr/local/lib
+    LIBG         := /usr/local/lib
     LDFLAGS      := -lboost_serialization -lgtest_main
     CLANG-CHECK  := clang-check
     GCOV         := gcov
@@ -24,6 +25,7 @@ else ifeq ($(CI), true)                                                 # Travis
     INCLUDE      := /usr/include
     CXXFLAGS     := -pedantic -std=c++14 -Wall -Weffc++
     LIB          := /usr/lib
+    LIBG         := $(PWD)/gtest
     LDFLAGS      := -lboost_serialization -lgtest -lgtest_main -pthread
     CLANG-CHECK  := clang-check
     GCOV         := gcov-5
@@ -36,6 +38,7 @@ else ifeq ($(shell uname -p), unknown)                                  # Docker
     INCLUDE      := /usr/include
     CXXFLAGS     := -pedantic -std=c++14 -Wall -Weffc++
     LIB          := /usr/lib
+    LIBG         := /usr/lib
     LDFLAGS      := -lboost_serialization -lgtest -lgtest_main -pthread
     CLANG-CHECK  := clang-check
     GCOV         := gcov
@@ -48,6 +51,7 @@ else                                                                    # UTCS
     INCLUDE      := /usr/include
     CXXFLAGS     := -pedantic -std=c++14 -Wall -Weffc++
     LIB          := /usr/local/lib
+    LIBG         := /usr/local/lib
     LDFLAGS      := -lboost_serialization -lgtest -lgtest_main -pthread
     CLANG-CHECK  := clang-check
     GCOV         := gcov
