--- a/projects/collatz/makefile
+++ b/projects/collatz/makefile
@@ -22,7 +22,7 @@ ifeq ($(shell uname), Darwin)                                           # Apple
     CXX          := g++
     INCLUDE      := /usr/local/include
     CXXFLAGS     := -pedantic -std=c++14 -I$(INCLUDE) -Wall -Weffc++
-    LIB          := /usr/local/lib
+    LIBB         := /usr/local/lib
     LIBG         := /usr/local/lib
     LDFLAGS      := -lboost_serialization -lgtest_main
     CLANG-CHECK  := clang-check
@@ -35,7 +35,7 @@ else ifeq ($(CI), true)                                                 # Travis
     CXX          := g++-5
     INCLUDE      := /usr/include
     CXXFLAGS     := -pedantic -std=c++14 -Wall -Weffc++
-    LIB          := /usr/lib
+    LIBB         := /usr/lib
     LIBG         := $(PWD)/gtest
     LDFLAGS      := -lboost_serialization -lgtest -lgtest_main -pthread
     CLANG-CHECK  := clang-check
@@ -48,7 +48,7 @@ else ifeq ($(shell uname -p), unknown)                                  # Docker
     CXX          := g++
     INCLUDE      := /usr/include
     CXXFLAGS     := -pedantic -std=c++14 -Wall -Weffc++
-    LIB          := /usr/lib
+    LIBB         := /usr/lib
     LIBG         := /usr/lib
     LDFLAGS      := -lboost_serialization -lgtest -lgtest_main -pthread
     CLANG-CHECK  := clang-check
@@ -61,7 +61,7 @@ else                                                                    # UTCS
     CXX          := g++
     INCLUDE      := /usr/include
     CXXFLAGS     := -pedantic -std=c++14 -Wall -Weffc++
-    LIB          := /usr/local/lib
+    LIBB         := /usr/lib/x86_64-linux-gnu
     LIBG         := /usr/local/lib
     LDFLAGS      := -lboost_serialization -lgtest -lgtest_main -pthread
     CLANG-CHECK  := clang-check
@@ -181,9 +181,9 @@ versions:
 	@echo
 	ls -ald $(INCLUDE)/gtest
 	@echo
-	ls -al $(LIB)/*boost*
+	ls -al $(LIBB)/*boost*
 	@echo
-	ls -al $(LIB)/*gtest*
+	ls -al $(LIBG)/*gtest*
 	@echo
 	which $(CLANG-CHECK)
 	-$(CLANG-CHECK) --version
